fixer le bug de la modification

--- a/views/category/index.ejs
+++ b/views/category/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/head', { title: "Liste des categories" }) %>
 
     <!-- Sidebar -->
-    <%- include('../includes/sidebar') %>
+    <%- include('../includes/sidebar', { path: path }) %>
 
     
     <div class="flex-1 flex flex-col relative">
