--- a/views/category/add-update.ejs
+++ b/views/category/add-update.ejs
@@ -1,7 +1,7 @@
 <%- include('../includes/head', { title: "Liste des categories" }) %>
 
     <!-- Sidebar -->
-    <%- include('../includes/sidebar') %>
+    <%- include('../includes/sidebar', { path: path }) %>
 
 
         <div class="flex-1 flex flex-col">
@@ -15,7 +15,7 @@
                 <!-- Formulaire -->
                 <section class="bg-white p-6 rounded-2xl shadow">
                     <h2 class="text-lg font-semibold mb-4"><%= editing ? 'Modifier' : 'Ajouter' %> une Categorie</h2>
-                    <form action="/admin/categories<%= editing ? '/edit' : '/add' %>" method="post" class="grid grid-cols-1 md:grid-cols-1 gap-4 w-full md:w-1/2">
+                    <form action="/admin/categories<%= editing ? '/edit' : '/add' %>" method="POST" class="grid grid-cols-1 md:grid-cols-1 gap-4 w-full md:w-1/2">
                         <div class="md:col-span-1">
                             <p class="text-sm font-semibold text-black-500 mt-1">Titre</p>
                             <input type="text" name="title"
