--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -2,9 +2,8 @@
     <h2 class="text-2xl font-bold text-blue-600">New Blog</h2>
     <nav class="space-y-4">
       <a href="/admin/dashboard" class="block text-gray-700 hover:text-blue-600">Tableau de bord</a>
-      <a href="#" class="block text-gray-700 hover:text-blue-600">Articles</a>
-      <a href="/admin/categories" class="block text-gray-700 hover:text-blue-600">Catégories</a>
+      <a href="#" class="block <%= path === '/articles' ? 'text-blue-600' : 'text-gray-700' %>  hover:text-blue-600">Articles</a>
+      <a href="/admin/categories" class="block <%= path === '/categories' ? 'text-blue-600' : 'text-gray-700' %> hover:text-blue-600">Catégories</a>
       <a href="#" class="block text-gray-700 hover:text-blue-600">Utilisateurs</a>
-      <a href="#" class="block text-gray-700 hover:text-blue-600">Paramètres</a>
     </nav>
    </aside>
