--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,22 +1,41 @@
 <%- include('../includes/head', { title: "Login" }) %>
 
-<div class="fixed inset-0 bg-gray-100 flex items-center justify-center z-50" id="loginPage">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
-      <h2 class="text-xl font-bold mb-4 text-center">Connexion</h2>
-      <form class="space-y-4">
-        <div>
-          <input type="email" placeholder="Adresse e-mail" class="border px-3 py-2 rounded w-full text-sm" />
-          <p class="text-xs text-red-500 mt-1">Email requis</p>
+    <div class="fixed inset-0 bg-gray-100 flex items-center justify-center z-50" id="loginPage">
+        <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
+            <h2 class="text-xl font-bold mb-4 text-center">Connexion</h2>
+            <% if(errorMessage) { %>
+                <p class="text-xs text-red-500 mt-1">
+                    <%= errorMessage %>
+                </p>
+                <% } %>
+            <form class="space-y-4" action="/auth/login" method="POST">
+                
+                <div>
+                    <label for="emaol" class="text-sm font-semibold text-black-500 mt-1">Email</label>
+                    <input type="email" name="email" value="<%= oldUser.email %>"
+                        class="border px-3 py-2 rounded w-full text-sm" />
+                    <% if(errorsMessage.find(e=> e.path === 'email')) { %>
+                        <p class="text-xs text-red-500 mt-1">
+                            <%= errorsMessage.find(e=> e.path === 'email').msg %>
+                        </p>
+                        <% } %>
+                </div>
+                <div>
+                    <label for="password" class="text-sm font-semibold text-black-500 mt-1">Mot de passe</label>
+                    <input type="password" name="password" value="<%= oldUser.password %>"
+                        class="border px-3 py-2 rounded w-full text-sm" />
+                    <% if(errorsMessage.find(e=> e.path === 'password')) { %>
+                        <p class="text-xs text-red-500 mt-1">
+                            <%= errorsMessage.find(e=> e.path === 'password').msg %>
+                        </p>
+                        <% } %>
+                </div>
+                <button type="submit"
+                    class="bg-green-600 text-white px-4 py-2 rounded w-full text-sm hover:bg-green-700">Se connecter</button>
+            </form>
+            <p class="text-sm text-center mt-4">Pas de compte ? <a href="/auth/signup"
+                    class="text-blue-600 hover:underline">S'inscrire</a></p>
         </div>
-        <div>
-          <input type="password" placeholder="Mot de passe" class="border px-3 py-2 rounded w-full text-sm" />
-          <p class="text-xs text-red-500 mt-1">Mot de passe requis</p>
-        </div>
-        <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded w-full text-sm hover:bg-blue-700">Se connecter</button>
-        <a href="/index" class="bg-blue-600 text-white px-4 py-2 rounded w-full text-sm hover:bg-blue-700">Se connecter - test</a>
-      </form>
-      <p class="text-sm text-center mt-4">Pas de compte ? <a href="/auth/signup" class="text-blue-600 hover:underline">S'inscrire</a></p>
     </div>
-  </div>
 
-<%- include('../includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
