--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -5,6 +5,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <title><%= title %></title>
             <link rel='stylesheet' href='/stylesheets/output.css' />
+            <link rel='stylesheet' href='/javascript/script.js' />
         </head>
         <body class="bg-gray-100">
             <div class="min-h-screen flex">
