--- a/views/category/add-update.ejs
+++ b/views/category/add-update.ejs
@@ -6,9 +6,7 @@
 
         <div class="flex-1 flex flex-col">
             <!-- Header -->
-            <header class="bg-white shadow p-4 flex justify-between items-center">
-                <h1 class="text-xl font-bold text-gray-800"><%= editing ? 'Modifier' : 'Ajoute' %> - Categories </h1>
-            </header>
+            <%- include('../includes/header') %>
 
             <main class="flex-1 p-6 space-y-10">
 
