--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,7 @@
 
 <div class="flex-1 flex flex-col">
   <!-- Header -->
-  <header class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-xl font-bold text-gray-800">Dashboard - Articles</h1>
-  </header>
+  <%- include('includes/header') %>
 
   <main class="flex-1 p-6 space-y-10">
     <!-- Formulaire -->
