--- a/views/article/index.ejs
+++ b/views/article/index.ejs
@@ -1,8 +1,7 @@
-<%- include('../includes/head', { title: "Liste des categories" }) %>
+<%- include('../includes/head', { title: "Liste des articles" }) %>
 
     <!-- Sidebar -->
     <%- include('../includes/sidebar', { path: path }) %>
-
     
     <div class="flex-1 flex flex-col relative">
         <!-- Notification -->
@@ -19,9 +18,9 @@
                 <!-- Tableau des articles -->
                 <section class="bg-white p-6 rounded-2xl shadow">
                     <div class="flex justify-between">
-                        <h2 class="text-lg font-semibold mb-4">Liste des Categories</h2>
+                        <h2 class="text-lg font-semibold mb-4">Liste des Articles</h2>
                         <div>
-                            <a href="/categories/add"
+                            <a href="/articles/add"
                                 class="bg-blue-500 text-white px-2 py-1 text-xs rounded">Ajouter</a>
                         </div>
                     </div>
@@ -36,17 +35,17 @@
                         </thead>
                         <tbody>
                             <% 
-                            if(categories.length) {
-                                for(let category of categories) {
+                            if(articles.length) {
+                                for(let article of articles) {
                             %>
                                 <tr class="border-b hover:bg-gray-50">
                                     <td class="p-2"><input class="item" type="checkbox"></td>
-                                    <td class="p-2"><%= category.title %></td>
-                                    <td class="p-2"><%= category.slug %></td>
+                                    <td class="p-2"><%= article.title %></td>
+                                    <td class="p-2"><%= article.slug %></td>
                                     <td class="p-2 space-x-1">
-                                        <a href="/categories/edit/<%= category.id %>"
+                                        <a href="/admin/articles/edit/<%= article.id %>"
                                             class="bg-yellow-500 text-white px-2 py-1 text-xs rounded">Modifier</button>
-                                        <a href="/categories/delete/<%= category.id %>"
+                                        <a href="/admin/articles/delete/<%= article.id %>"
                                             class="bg-red-600 text-white px-2 py-1 text-xs rounded">Supprimer</a>
                                         <!-- <a href="#" onclick="document.getElementById('detailModal').classList.remove('hidden')"
                                             class="bg-red-600 text-white px-2 py-1 text-xs rounded">Supprimer</a> -->
@@ -56,7 +55,7 @@
                                 }
                             } else { 
                             %>
-                                <tr><td>Pas de produits Trouves</td></tr>
+                                <tr><td>Pas d'article Trouves</td></tr>
                             <% } %>
                         </tbody>
                     </table>
@@ -79,4 +78,4 @@
             </div> -->
 
 
-            <%- include('../includes/end') %>
+<%- include('../includes/end') %>
