--- a/views/category/add-update.ejs
+++ b/views/category/add-update.ejs
@@ -13,7 +13,8 @@
                 <!-- Formulaire -->
                 <section class="bg-white p-6 rounded-2xl shadow">
                     <h2 class="text-lg font-semibold mb-4"><%= editing ? 'Modifier' : 'Ajouter' %> une Categorie</h2>
-                    <form action="/admin/categories<%= editing ? '/edit' : '/add' %>" method="POST" class="grid grid-cols-1 md:grid-cols-1 gap-4 w-full md:w-1/2">
+                    <form action="/categories<%= editing ? '/edit' : '/add' %>" method="POST" class="grid grid-cols-1 md:grid-cols-1 gap-4 w-full md:w-1/2">
+                        <input type="hidden" readonly name="_csrf" value="<%= csrfToken %>">
                         <div class="md:col-span-1">
                             <p class="text-sm font-semibold text-black-500 mt-1">Titre</p>
                             <input type="text" name="title"
