--- a/views/article/index.ejs
+++ b/views/article/index.ejs
@@ -43,9 +43,9 @@
                                     <td class="p-2"><%= article.title %></td>
                                     <td class="p-2"><%= article.slug %></td>
                                     <td class="p-2 space-x-1">
-                                        <a href="/admin/articles/edit/<%= article.id %>"
+                                        <a href="/articles/edit/<%= article.id %>"
                                             class="bg-yellow-500 text-white px-2 py-1 text-xs rounded">Modifier</button>
-                                        <a href="/admin/articles/delete/<%= article.id %>"
+                                        <a href="/articles/delete/<%= article.id %>"
                                             class="bg-red-600 text-white px-2 py-1 text-xs rounded">Supprimer</a>
                                         <!-- <a href="#" onclick="document.getElementById('detailModal').classList.remove('hidden')"
                                             class="bg-red-600 text-white px-2 py-1 text-xs rounded">Supprimer</a> -->
