--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -3,7 +3,7 @@
     <nav class="space-y-4">
         <a href="/dashboard" 
             class="block <%= path === '/dashboard' ? 'text-blue-600' : 'text-gray-700' %> hover:text-blue-600">Tableau de bord</a>
-        <a href="articles"
+        <a href="/articles"
             class="block <%= path === '/articles' ? 'text-blue-600' : 'text-gray-700' %>  hover:text-blue-600">Articles</a>
         <a href="/categories"
             class="block <%= path === '/categories' ? 'text-blue-600' : 'text-gray-700' %> hover:text-blue-600">Catégories</a>
