--- a/views/500.ejs
+++ b/views/500.ejs
@@ -4,7 +4,7 @@
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm text-center">
         <h1 class="text-4xl font-bold mb-4 text-red-600">500</h1>
         <h2 class="text-xl font-semibold mb-6">Erreur!!</h2>
-        <p class="mb-6 text-gray-700">Désolé, la page que vous recherchez n’existe pas ou a été déplacée.</p>
+        <p class="mb-6 text-gray-700"><%= message %></p>
         <a href="/"
             class="inline-block bg-blue-600 text-white px-6 py-2 rounded text-sm hover:bg-blue-700 transition">
             Retour à l’accueil
